Add functionality to the game list